--- a/Irregular-occ/references.bib
+++ b/Irregular-occ/references.bib
@@ -22,6 +22,20 @@ year={1991},
 pages={19253}
 }
 
+@article{Olkin1997,
+title={The Thermal Structure of Triton’s Atmosphere: Results from the 1993 and 1995 Occultations},
+volume={129},
+url={http://dx.doi.org/10.1006/icar.1997.5757},
+DOI={10.1006/icar.1997.5757},
+number={1},
+journal={Icarus},
+publisher={Elsevier BV},
+author={Olkin, C.B. and Elliot, J.L. and Hammel, H.B. and Cooray, A.R. and McDonald, S.W. and Foust, J.A. and Bosh, A.S. and Buie, M.W. and Millis, R.L. and Wasserman, L.H. and others},
+year={1997},
+month={Sep},
+pages={178–201}
+}
+
 @article{Thomas2000,
 title={The Shape of Triton from Limb Profiles},
 volume={148},
