--- a/Irregular-occ/Irregular-occ.tex
+++ b/Irregular-occ/Irregular-occ.tex
@@ -134,7 +134,7 @@ Federal University of Technology - Paraná (UTFPR / DAFIS), Rua Sete de Setembro
 \abstract
 {Due to their orbital configurations, it is common belief that the irregular satellites were probably captured by the giant planets in the early solar system. It is important to know their physical parameters, such as size, shape, albedo and composition, to trace back their true origin. The best ground-based technique to determine size and shape, and thus constrain the albedo and in a broader sense composition, is the observation of stellar occultations by these objects.}
 {We aim to predict stellar occultations for the eight largest irregular satellites of Jupiter: Himalia, Elara, Pasiphae, Carme, Lysithea, Sinope, Ananke and Leda, and for the irregular satellites Phoebe of Saturn and Nereid of Neptune, and also for Triton.}
-{We identified candidates to stellar occultations by the irregular satellites from the UCAC4 catalogue and from a catalogue of stars in the sky-path of Neptune obtained from observations made with the ESO2p2/WFI (2.2 m Max-Planck ESO telescope with the Wide Field Imager) instrument. These catalogues were crossed with the ephemeris of the satellites to identify stellar occultations. We used a new ephemeris based solely on the observations from \cite{GomesJunior2015} to generate predictions for the short-time future for the satellites of Jupiter and Phoebe. For Nereid and Triton we used recently published ephemeris.}
+{We identified candidates to stellar occultations by the irregular satellites from the UCAC4 catalogue and from a catalogue of stars in the sky-path of Neptune obtained from observations made with the ESO2p2/WFI (2.2 m Max-Planck ESO telescope with the Wide Field Imager) instrument. These catalogues were crossed with the ephemeris of the satellites to identify stellar occultations. We used a new ephemeris based solely on the observations from \cite{GomesJunior2015} to generate predictions for the short-time future or the satellites of Jupiter. For Phoebe, we used an updated ephemeris and for Nereid and Triton we used recently published ephemeris.}
 {We managed to identify 396 candidates of stellar occultations between the period of January, 2016 and December, 2017. We made observational tests for the prediction of the event of Himalia in March 03, 2015. The stars and objects were observed close to the date predicted and in the same field to minimize errors and the obtained relative satellite-star positions were used to evaluate the predictions. We call attention for an occultation by Triton of a bright star (R=12.5) in October 5, 2017. The event can be observed from Europe and the east coast of USA and will be a good opportunity to access the current state of the atmosphere of the satellite.}
 {The comparisons between the predictions and the observation tests show a good agreement. We discuss how the successful observation of a stellar occultation by these objects is quite possible and present some of those potential occultations.}
 
@@ -255,7 +255,7 @@ Phoebe is the most studied irregular satellite. \cite{Clark2005} suggest that it
 
 In order to obtain precise fundamental physical parameters like size and shape, thus constraining the albedo and in a broader sense also the composition for the irregular satellites and therefore to contribute to the study of their origin, we aim at observing stellar occultations, which provide  more accurate results than other ground-based techniques \citep{Sicardy2011, Ortiz2012, Braga-Ribas2014}. For that, reliable predictions of stellar occultations by these satellites are most needed.
 
-We present in this paper stellar occultation predictions for the 8 major irregular satellites of Jupiter (Himalia, Elara, Pasiphae, Lysithea, Carme, Ananke, Sinope and Leda), Phoebe from Saturn and Nereid and Triton from Neptune. Phoebe, being the most studied object with a good measured size, can be used to calibrate and evaluate the technique for similar objects.
+We present in this paper stellar occultation predictions for the 8 major irregular satellites of Jupiter (Himalia, Elara, Pasiphae, Lysithea, Carme, Ananke, Sinope and Leda), Phoebe of Saturn and, Nereid and Triton of Neptune. Phoebe, being the most studied object with a good measured size, can be used to calibrate and evaluate the technique for similar objects.
 
 Triton is an uncommon satellite. Its orbit is retrograde and inclined, but quasi-circular and very close to the planet compared to the irregular ones. Because Triton's orbit size is very small and its precession is not dominated by Solar perturbations, Triton is frequently excluded from the irregular satellites' class, but still studied together by many authors \citep{Sheppard2005, Jewitt2007}. Similarly to the irregular satellites, Triton was probably captured in the early solar system and may have the same origin as the TNOs \citep{Agnor2006}. However, Triton is bigger than the irregular satellites by an order of magnitude and has an atmosphere. The main motivation to study Triton by stellar occultations is to understand the evolution of its atmosphere due to Triton's complicated and extreme seasonal cycle \citep{McKinnon2007, Elliot_2000}. For all these reasons, Triton was also included as a target in this work.
 
@@ -295,7 +295,7 @@ Triton & 124 & $2707 \pm 2.0$\tablefootmark{c} & 5 \tabularnewline
 
 \cite{GomesJunior2015} obtained 6523 suitable positions for 18 irregular satellites between 1992 and 2014 with an estimated error in the positions of about 60 to 80 mas. For some satellites the number of positions obtained is comparable to the number used in the numerical integration of orbits by the JPL \citep{Jacobson2012}. They pointed out that the ephemeris of the irregular satellites have systematic errors that may reach 200 mas for some satellites. For an object at the distance of Jupiter, this represents an error larger than 700 km in the shadow path. Using the positions obtained by \cite{GomesJunior2015} we produced a specific short-time ephemeris for the satellites of Jupiter and Phoebe to better predict stellar occultations by these objects.
 
-Since 2009 many successful observations of stellar occultations by TNOs have been reported in the literature \citep{Elliot2010, Sicardy2011, Ortiz2012, Braga-Ribas2013}, the main disadvantages in their prediction being large heliocentric distances and ephemeris error, facts somewhat compensated for the larger diameters involved. However, in the case of irregular satellites, we have much better ephemeris because the orbits of their host planets are well known, their observational time span is much wider and covers many orbital periods in contrast to TNOs. Moreover, the irregular satellites are much closer to Earth which implies in a much smaller shadow path error in kilometers. These advantages may be somewhat balanced by the smaller sizes estimated for the irregular satellites.Thus, in comparison, the chances for a successful observation of an stellar occultation by an irregular satellite should be considered at least also as good as those by TNOs.
+Since 2009 many successful observations of stellar occultations by TNOs have been reported in the literature \citep{Elliot2010, Sicardy2011, Ortiz2012, Braga-Ribas2013}, the main disadvantages in their prediction being large heliocentric distances and ephemeris error, facts somewhat compensated for the larger diameters involved. However, in the case of irregular satellites, we have much better ephemeris because the orbits of their host planets are better known, their observational time span is much wider and covers many orbital periods in contrast to TNOs. Moreover, the irregular satellites are much closer to Earth which implies in a much smaller shadow path error in kilometers. These advantages may be somewhat balanced by the smaller sizes estimated for the irregular satellites.Thus, in comparison, the chances for a successful observation of an stellar occultation by an irregular satellite should be considered at least also as good as those by TNOs.
 
 %From what we have just presented, we can think that the observation of an stellar occultation by an irregular satellite should be likelier than occultations by TNOs. The orbits of their host planets are well known and their observation time-span covers many orbital periods, contrary to TNOs.
 %Unlike stellar occultations by TNOs, which nevertheless have been proved effective, the observation of an occultation by a irregular satellite is, in principle, more favorable. The orbits of their host planets are well known and these satellites have been observed completing already many orbital periods around them, thus presenting better ephemeris than TNOs. 
@@ -334,15 +334,16 @@ We use the following notations: \begin{itemize}
 \item $\Phi_i$ is the inclination of the $i$-th satellite with respect to Jupiter's equator.
 \end{itemize}
 
-For an irregular satellite $i$, under the gravitational influence of Jupiter, the $\mathcal{N'}-1$ other irregular satellites, the regular Jovian satellites and the rest of the Solar System ($\mathcal{N}$ bodies), the equation of motion is:
+For an irregular satellite $i$, under the gravitational influence of Jupiter, the $\mathcal{N}-1$ other irregular satellites, the regular Jovian satellites and the rest of the Solar System ($\mathcal{N}$ bodies), the equation of motion is:
 \begin{equation}\begin{array}{ll}
 
 \ddot{\vec{r_i}}= & \displaystyle -GM_J\frac{\vec{r_J}-\vec{r_i}}{r_{iJ}^3}-\sum_{l=1,l\neq i}^\mathcal{N'}Gm_l\frac{\vec{r_l}-\vec{r_i}}{r_{il}^3}\\
-&\displaystyle -\sum_{j=1}^\mathcal{N}GM_j \left(\frac{\vec{r_j}-\vec{r_i}}{r_{ij}^3} - \underbrace{\frac{\vec{r_j}-\vec{r_J}}{r_{Jj}^3}}_\mathtt{undirect perturbations} \right)\\
- & \displaystyle +GM_J \nabla U_{\bar{l}\hat{J}} -\underbrace{\sum_{l=1}^\mathcal{N} Gm_l\nabla U_{\bar{l}\hat{J}}}_\mathtt{undirect perturbations}
+&\displaystyle -\sum_{j=1}^\mathcal{N}GM_j \left(\frac{\vec{r_j}-\vec{r_i}}{r_{ij}^3} - \frac{\vec{r_j}-\vec{r_J}}{r_{Jj}^3} \right)\\
+ & \displaystyle +GM_J \nabla U_{\bar{l}\hat{J}} -\sum_{l=1}^\mathcal{N} Gm_l\nabla U_{\bar{l}\hat{J}}
 \end{array}
+\label{Eq:1}
 \end{equation}
-where the oblateness potential seen by the body $i$ because of Jupiter is:
+where the last term in the brackets and the last term in Eq. \ref{Eq:1} represent undirect perturbations. The oblateness potential seen by the body $i$ because of Jupiter is:
 \begin{equation}\begin{array}{ll}
 
 U_{\bar{l}\hat{J}}=&\displaystyle -\frac{R_J^2 J_2}{r_{iJ}^3}\left(\frac{3}{2}\sin^2 \Phi_i-\frac{1}{2}\right)\\ &\\ & 
@@ -409,7 +410,7 @@ The obtained ephemeris is hereafter refered as STE, for special-tailored ephemer
 
 \subsection{Phoebe's ephemeris}
 
-For the specific case of Phoebe, the ninth satellite of Saturn, we have updated the ephemeris published in \cite{Desmars2013}. The new ephemeris (PH15) used the same dynamical model, including the perturbations of the Sun and the eight planets, the eight major satellites of Saturn and the $J_2$ parameter. The observations used to fit the model are identical to \cite{Desmars2013} (including 223 Cassini observations) with additional observations from \cite{GomesJunior2015}, \cite{Peng2015}, observations from Minor Planet Circulars between 2012 and 2014 (available on the Natural Satellite Data Center at \url{http://lnfm1.sai.msu.ru/neb/nss/bsapoouf.htm}), and observations from Flagstaff \citep{NOFS} between 2012 and 2014. It represents a total number of 5886 observations from 1898 to 2014.
+For the specific case of Phoebe, the ninth satellite of Saturn, we have updated the ephemeris published in \cite{Desmars2013}. The new ephemeris (PH15) used the same dynamical model, including the perturbations of the Sun and the eight planets, the eight major satellites of Saturn and the $J_2$ parameter. The observations used to fit the model are identical to \cite{Desmars2013} (including 223 Cassini observations) with additional observations from \cite{GomesJunior2015}, \cite{Peng2015}, observations from Minor Planet Circulars between 2012 and 2014 (available on the Natural Satellite Data Center\footnote{\url{http://lnfm1.sai.msu.ru/neb/nss/bsapoouf.htm}}), and observations from Flagstaff \citep{NOFS} between 2012 and 2014. It represents a total number of 5886 observations from 1898 to 2014.
 
 In Fig. \ref{Fig:eph-Phoebe} we compare our ephemeris (PH15) with the SAT375 JPL\footnote{Jacobson, R.A. 2015-Feb-27. "Satellite Ephemeris: SAT375", JPL Satellite Ephemeris File Release, \url{ftp://ssd.jpl.nasa.gov/pub/eph/satellites/nio/LINUX_PC/sat375l.txt}} and the \cite{Emelyanov2007} ephemeris. We can see that our ephemeris is closer to the SAT375 JPL ephemeris where the difference between them is smaller than 20 mas (< 10 mas in Declination). This difference is smaller than the apparent diameter of Phoebe (see Table \ref{Tab: satellite-diameter})
 
@@ -488,11 +489,11 @@ For Nereid, we used the ephemeris published by \cite{Emelyanov2011}, which uses 
 
 The prediction of the occultations was made by crossing the stellar coordinates and proper motions of the UCAC4 catalogue \citep{Zacharias2013} with the ephemeris presented in Sec. \ref{Sec: integration}. The search for stellar candidates follows the same procedure as presented by \cite{Assafin2010, Assafin2012} and \cite{Camargo2014}.
 
-We predicted occultations for the 8 major irregular satellites of Jupiter,  Ananke, Carme, Elara, Himalia, Leda, Lysithea, Pasiphae and Sinope, and for Phoebe Phoebe of Saturn and Triton and Nereid of Neptune.
+We predicted occultations for the 8 major irregular satellites of Jupiter,  Ananke, Carme, Elara, Himalia, Leda, Lysithea, Pasiphae and Sinope, and for Phoebe of Saturn and Triton and Nereid of Neptune.
 
 For Triton and Nereid, the candidates for stellar occultations in 2016 were searched using the WFI catalogue in the same way as the predictions for Centaurs and TNOs occultations by \cite{Assafin2010, Assafin2012} and \cite{Camargo2014}. This catalogue contains the stars in the path of Neptune in the sky up to mid-2016. The catalogue was generated by observations made at the ESO 2p2 telescope (IAU code 809) using the Wide Field Imager (WFI) CCD mosaic detector. The filter used was the broad-band R filter ESO\#844 with $\lambda_c$ = 651.725 nm and $\Delta\lambda$ = 162.184 nm.
 
-A total of 396 events were identified between January 2016 and December 2017. In Table \ref{Tab: satellite-occultation} we present the number of stellar occultations predicted by year for each satellite. Table \ref{Tab: occ-list} shows a sample of the catalogue of occultations generated and their parameters, which are necessary to produce occultation maps. Since these objects are very small, the duration of each event is a few seconds. All the occultation tables and maps will be publicly available at the CDS. No star brighter than MagR*=18 will be occulted by Triton in 2016. For this satellite, we cut events with stars fainter than R=18, since for Triton the flux drop during such an occultation would be very small. In Fig. \ref{Fig: ocultacao} we show an example of an occultation map. This is the only found occultation by Triton that will happen in October 05, 2017. This event can be observed from Europe and the east coast of USA and will be a great opportunity to study in high resolution the atmosphere of the satellite.
+A total of 396 events were identified between January 2016 and December 2017. In Table \ref{Tab: satellite-occultation} we present the number of stellar occultations predicted by year for each satellite. Table \ref{Tab: occ-list} shows a sample of the catalogue of occultations generated and their parameters, which are necessary to produce occultation maps. Since these objects are very small, the duration of each event is a few seconds. All the occultation tables and maps will be publicly available at the CDS. No star brighter than MagR*=18 will be occulted by Triton in 2016. For this satellite, we cut events with stars fainter than R=18, since for Triton the flux drop during such an occultation would be very small. In Fig. \ref{Fig: ocultacao} we show an example of an occultation map. This is the only found occultation by Triton and it will happen in October 05, 2017. This event can be observed from Europe and the east coast of USA and will be a great opportunity to study in high resolution the atmosphere of the satellite.
 
 \begin{table}
 \caption{\label{Tab: satellite-occultation} Number of stellar occultations for each satellite from January, 2016 up to December, 2017.}
