--- a/Irregular-occ/references.bib
+++ b/Irregular-occ/references.bib
@@ -448,6 +448,20 @@ month={Aug},
 pages={458–463}
 }
 
+@INPROCEEDINGS{Assafin2011,
+   author = {{Assafin}, M. and {Vieira Martins}, R. and {Camargo}, J.~I.~B. and 
+	{Andrei}, A.~H. and {Da Silva Neto}, D.~N. and {Braga-Ribas}, F.
+	},
+    title = "{PRAIA - Platform for Reduction of Astronomical Images Automatically}",
+booktitle = {Gaia follow-up network for the solar system objects : Gaia FUN-SSO workshop proceedings, held at IMCCE -Paris Observatory, France, November 29 - December 1, 2010. ISBN 2-910015-63-7},
+     year = 2011,
+   editor = {{Tanga}, P. and {Thuillot}, W.},
+    month = jun,
+    pages = {85-88},
+   adsurl = {http://adsabs.harvard.edu/abs/2011gfun.conf...85A},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
 @article{Ortiz2012,
 title={Albedo and atmospheric constraints of dwarf planet Makemake from a stellar occultation},
 volume={491},
