--- a/Irregular-occ/Irregular-occ.tex
+++ b/Irregular-occ/Irregular-occ.tex
@@ -1,6 +1,6 @@
 %% LyX 2.0.0 created this file.  For more info, see http://www.lyx.org/.
 %% Do not edit unless you really know what you are doing.
-\documentclass[english,traditabstract]{aa}
+\documentclass[english,useAMS,usenatbib]{mn2e}
 \usepackage[varg]{txfonts}
 %\usepackage[english,brazilian]{babel}
 \usepackage[T1]{fontenc}
