--- a/Irregular-occ/Irregular-occ.tex
+++ b/Irregular-occ/Irregular-occ.tex
@@ -279,7 +279,7 @@ Lysithea & 16 & 11 & & & &  \tabularnewline
 Pasiphae & 20 & 19 & & & &  \tabularnewline
 Sinope & 15 & 21 & & & &  \tabularnewline
 \hdashline
-Phoebe & 32 & 98 & & & &  \tabularnewline
+Phoebe & 32 & 98 & 238 & 79 & 13 & 460 \tabularnewline
 \hdashline
 Nereid & 11$^{a}$ & 1 & & & &  \tabularnewline
 Triton & -- & 1 & & & &  \tabularnewline
